[tool.poetry]
name = "dropbox-uploader"
version = "0.1.0"
description = "Super Simple Dropbox Uploader"
authors = ["Jt Miclat <jtcmic@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
dropbox = "^9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
